fixed navbar so it is showing the correct color on mobile devices

--- a/public_html/styles.css
+++ b/public_html/styles.css
@@ -68,7 +68,6 @@ div[class*="portfolio"] {
 }
 
 footer {
-	width: 100%;
 	background-color: teal;
 }
 
